--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^11.2.1",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
+    "@angular/localize": "~11.2.1",
+    "@angular/material": "^11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "admin-lte": "^3.1.0-rc",
+    "angular-datatables": "^11.1.1",
+    "bootstrap": "^4.5.0",
+    "datatables.net": "^1.10.23",
+    "datatables.net-dt": "^1.10.23",
+    "jquery": "^3.5.1",
+    "ng-uikit-pro-standard": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,7 +38,9 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
