--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "datatables.net": "^1.10.23",
     "datatables.net-dt": "^1.10.23",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
